# jemalloc

./: .gitignore  CMakeLists.txt  ChangeLog  Dockerfile.static-analysis  INSTALL.adoc  Makefile.in  README.adoc  RELEASING.adoc  TUNING.md  configure.ac  vcpkg.json
.github/scripts/: bump-version.sh  test-release-system.sh
.github/workflows/: checks.yml  ci.yml  release.yml
cmake/: FindJemalloc.cmake  JemallocConfig.cmake.in  JemallocConfigVersion.cmake.in
cmake/checks/: CompilerFeatures.cmake  MemoryFeatures.cmake  ProfilingSupport.cmake  SystemHeaders.cmake  ThreadSupport.cmake
cmake/compiler/: Clang.cmake  Common.cmake  DetectCompiler.cmake  GCC.cmake  MSVC.cmake
cmake/config/: GenerateHeaders.cmake  GenerateVersion.cmake
cmake/install/: CMakeConfig.cmake  Targets.cmake
cmake/platform/: Darwin.cmake  DetectPlatform.cmake  FreeBSD.cmake  Linux.cmake  Unix.cmake  Windows.cmake
cmake/sources/: CoreSources.cmake  PlatformSources.cmake  SourceGroups.cmake
doc/: CMAKE_INTEGRATION.adoc  jemalloc.xml.in  profiling.adoc
include/jemalloc/: jemalloc_macros.h.in
include/jemalloc/internal/: atomic.h  bit_util.h  jemalloc_internal_decls.h  jemalloc_internal_defs.h.in  jemalloc_internal_types.h  spin.h  spin_delay_arm.h  tsd.h
msvc/: jemalloc_vc2015.sln  jemalloc_vc2017.sln  jemalloc_vc2019.sln  jemalloc_vc2022.sln
msvc/projects/vc2015/jemalloc/: jemalloc.vcxproj  jemalloc.vcxproj.filters
msvc/projects/vc2015/test_threads/: test_threads.vcxproj
msvc/projects/vc2017/jemalloc/: jemalloc.vcxproj
msvc/projects/vc2017/test_threads/: test_threads.vcxproj
msvc/projects/vc2019/jemalloc/: jemalloc.vcxproj
msvc/projects/vc2019/test_threads/: test_threads.vcxproj
msvc/projects/vc2022/jemalloc/: jemalloc.vcxproj
msvc/projects/vc2022/test_threads/: test_threads.vcxproj
ports/jemalloc/: portfile.cmake  usage  vcpkg.json
scripts/: run_static_analysis.sh  strip_trailing_whitespace.sh
src/: background_thread.c  jemalloc.c  jemalloc_cpp.cpp  prof_log.c  prof_sys.c  spin_delay_arm.c  tcache.c  tsd.c  zone.c
test/: CMakeLists.txt
test/analyze/: spin_sb_benchmark.c
test/cmake/add_subdirectory/: CMakeLists.txt  main.c
test/cmake/fetchcontent/: CMakeLists.txt  main.c
test/cmake/find_package/: CMakeLists.txt  main.c
test/integration/: MALLOCX_conf_override.c  MALLOCX_conf_override.sh
test/integration/cpp/: infallible_new_false.cpp
test/unit/: spin.c
