# test/CMakeLists.txt
# Testing infrastructure for jemalloc
# NOTE: This is a stub - full test integration requires conversion of existing test framework

# Test framework library (to be implemented)
# add_library(jemalloc_test_framework STATIC
#     src/test.c
#     src/thd.c
#     src/timer.c
# )

# Function to add a jemalloc test
function(add_jemalloc_test test_name)
    # Parse arguments
    set(test_source "unit/${test_name}.c")
    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${test_source}")
        set(test_source "integration/${test_name}.c")
    endif()

    # Create test executable (commented out until test framework is ready)
    # add_executable(${test_name} ${test_source})
    # target_link_libraries(${test_name} PRIVATE
    #     jemalloc::jemalloc
    #     jemalloc_test_framework
    # )
    # add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

# Add tests here
# Example:
# add_jemalloc_test(arena)
# add_jemalloc_test(base)
# add_jemalloc_test(bitmap)

message(STATUS "Test infrastructure stub created - full integration pending")
